hphp/hack/test/typecheck/expression_trees/generator.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`() ==> { yield 1; }`;
}
